// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders 1`] = `
<div
  className="h-96 bg-white p-4 w-full"
>
  <div
    className="sc-eqhNQH geOddK popup "
  >
    <div
      className="sc-jmQrGM bpGgKC"
    >
      <form
        className="sc-gyKfoT WRuBN"
        noValidate={true}
        onSubmit={[Function]}
      >
        <span
          className="sc-jpInJi bVOpbY"
        >
          <input
            autoComplete="off"
            className="sc-cRkqwB evEaUa"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search"
            required={true}
            type="text"
            value=""
          />
          <svg
            className="sc-iWajrY sc-cUcmyX  gJKGSn"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
              fill="currentColor"
            />
          </svg>
          
          <input
            hidden={true}
            type="submit"
          />
        </span>
      </form>
      <button
        className="sc-jmhOSl ksePDH sc-gvSjmx jHBlWr"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        <span>
          Clear
        </span>
        <div
          className="sc-dYtREw KOYqG"
        />
      </button>
    </div>
    <div
      className="sc-jmQrGM bpGgKC"
    >
      <div
        className="sc-hhfWkW iFfPgR"
      >
        <ul
          className="sc-bPnocz kYfAKG"
        >
          <li>
            <span>
              No results
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders Loading State 1`] = `
<div
  className="h-40 bg-white p-4 w-full"
>
  <div
    className="sc-eqhNQH geOddK popup "
  >
    <div
      className="sc-jmQrGM bpGgKC"
    >
      <form
        className="sc-gyKfoT WRuBN"
        noValidate={true}
        onSubmit={[Function]}
      >
        <span
          className="sc-jpInJi bVOpbY"
        >
          <input
            autoComplete="off"
            className="sc-cRkqwB evEaUa"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search"
            required={true}
            type="text"
            value=""
          />
          <svg
            className="sc-iWajrY sc-cUcmyX  gJKGSn"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24.647 25.354a.5.5 0 10.706-.708l-.706.708zm-9.685-2.93A7.462 7.462 0 017.5 14.96h-1a8.462 8.462 0 008.461 8.462v-1zM7.5 14.96c0-4.12 3.34-7.461 7.461-7.461v-1A8.462 8.462 0 006.5 14.961h1zM14.961 7.5c4.121 0 7.462 3.34 7.462 7.461h1A8.462 8.462 0 0014.962 6.5v1zm7.462 7.461a7.436 7.436 0 01-2.19 5.28l.707.708a8.437 8.437 0 002.483-5.988h-1zm-2.19 5.28a7.436 7.436 0 01-5.272 2.182v1a8.437 8.437 0 005.98-2.474l-.707-.708zm0 .708l4.414 4.405.706-.708-4.413-4.405-.706.708z"
              fill="currentColor"
            />
          </svg>
          
          <input
            hidden={true}
            type="submit"
          />
        </span>
      </form>
    </div>
    <div
      className="sc-jmQrGM bpGgKC"
    >
      <div
        className="sc-hhfWkW iFfPgR"
      >
        <ul
          className="sc-hxCwtQ ixZoKR"
        >
          <li>
            Loading...
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
